--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <div id="cabecera"><h1>PORTAFOLI</h1></div>
     <div id="coche"></div>
     <div id="contenedor">
-<div class="bola"><p>1</p></div>
-<div class="bola"><p>2</p></div>
-<div class="bola"><p>3</p></div>
-<div class="bola"><p>4</p></div>
-<div class="bola"><p>5</p></div>
-<div class="bola"><p>6</p></div>
-<div class="bola"><p>7</p></div>
-<div class="bola"><p>8</p></div>
+<a href="horario/index.html" target="_blank"><div class="bola"><p>1</p></div>
+<a href="feedly/index.html" target="_blank"><div class="bola"><p>2</p></div>
+<a href="mapas/index.html" target="_blank"><div class="bola"><p>3</p></div>
+<a href="bobesponja/index.html" target="_blank"><div class="bola"><p>4</p></div>
+<a href="responsive/index.html" target="_blank"><div class="bola"><p>5</p></div>
+<a href="flor/index.html" target="_blank"><div class="bola"><p>6</p></div>
+<a href="paisaje/index.html" target="_blank"><div class="bola"><p>7</p></div>
+<a href="menuweb/index.html" target="_blank"><div class="bola"><p>8</p></div>
 <img id="srt" src="Img/2.png">
     </div>
 
