--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <div id="cabecera"><h1>PORTAFOLI</h1></div>
     <div id="coche"></div>
     <div id="contenedor">
-<a href="horario/index.html" target="_blank"><div class="bola"><p>1</p></div>
-<a href="feedly/index.html" target="_blank"><div class="bola"><p>2</p></div>
-<a href="mapas/index.html" target="_blank"><div class="bola"><p>3</p></div>
-<a href="bobesponja/index.html" target="_blank"><div class="bola"><p>4</p></div>
-<a href="responsive/index.html" target="_blank"><div class="bola"><p>5</p></div>
-<a href="flor/index.html" target="_blank"><div class="bola"><p>6</p></div>
-<a href="paisaje/index.html" target="_blank"><div class="bola"><p>7</p></div>
-<a href="menuweb/index.html" target="_blank"><div class="bola"><p>8</p></div>
+<a href="horario/index.html" target="_blank"><div class="bola"><p>Horario</p></div>
+<a href="feedly/index.html" target="_blank"><div class="bola"><p>Feedly</p></div>
+<a href="mapas/index.html" target="_blank"><div class="bola"><p>3</Mapas></div>
+<a href="bobesponja/index.html" target="_blank"><div class="bola"><p>Bob Esponja</p></div>
+<a href="responsive/index.html" target="_blank"><div class="bola"><p>Responsive</p></div>
+<a href="flor/index.html" target="_blank"><div class="bola"><p>Flor</p></div>
+<a href="paisaje/index.html" target="_blank"><div class="bola"><p>Paisaje</p></div>
+<a href="menuweb/index.html" target="_blank"><div class="bola"><p>Menu</p></div>
     </div>
 
 </html>
