--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="contenedor">
 <a href="horario/index.html" target="_blank"><div class="bola"><p>Horario</p></div>
 <a href="feedly/index.html" target="_blank"><div class="bola"><p>Feedly</p></div>
-<a href="mapas/index.html" target="_blank"><div class="bola"><p>3</Mapas></div>
+<a href="mapas/index.html" target="_blank"><div class="bola"><p>Mapas</p></div>
 <a href="bobesponja/index.html" target="_blank"><div class="bola"><p>Bob Esponja</p></div>
 <a href="responsive/index.html" target="_blank"><div class="bola"><p>Responsive</p></div>
 <a href="flor/index.html" target="_blank"><div class="bola"><p>Flor</p></div>
